sdk/userspace/include/fpga_common.h

#define FPGA_PF_MAX            	3
/**
 * Common FPGA command flags.
 */
enum {
	/** reserved */
	FPGA_CMD_RSVD = 1 << 0,
	/** return FPGA image hardware metrics */ 
	FPGA_CMD_GET_HW_METRICS = 1 << 1,
	/** return FPGA image hardware metrics (clear on read */ 
	FPGA_CMD_CLEAR_HW_METRICS = 1 << 2,

	FPGA_CMD_ALL_FLAGS = FPGA_CMD_GET_HW_METRICS | 
		FPGA_CMD_CLEAR_HW_METRICS,
};
/** 
 * FPGA specific errors
 * e.g. as returned by fpga-load-local-image, fpga-clear-local-image,
 *   and fpga-describe-local-image.
 *
 *  -note that these must fit into an int32_t and must be positive integers.
 *  -this is compatible with the standard errno values such as -EINVAL, -EIO, 
 *  -EPERM, -ENOENT that are also used.
 *
 *  Any additions should also be added to FPGA_ERR2STR (see below).
 */
enum {
    /** Negative values are compatible with standard errno returns */

    /** No error */
    FPGA_ERR_OK = 0,

	/** Reserved: 1, 2 */

	/** AFI command is in-progress (busy) */
	FPGA_ERR_AFI_CMD_BUSY = 3,

	/** Reserved: 4 */

	/** Invalid AFI ID */
	FPGA_ERR_AFI_ID_INVALID = 5,

	/** Reserved: 6-10 */

	/** Invalid AFI_CMD_API_VERSION, see afi_cmd_api.h */
	FPGA_ERR_AFI_CMD_API_VERSION_INVALID = 11, 
    /** CL PCI IDs did not match (e.g. between LF and CL reported values */
    FPGA_ERR_CL_ID_MISMATCH = 12,
    /** CL DDR calibration failed */
    FPGA_ERR_CL_DDR_CALIB_FAILED = 13,
    /** generic/unspecified error */
    FPGA_ERR_FAIL = 14,

    FPGA_ERR_END
};
/**
 * FPGA status
 * e.g. as reported by fpga-describe-local-image.
 *
 * Any additions should also be added to FPGA_STATUS2STR (see below).
 */
enum {
	/**< FPGA slot has an AFI loaded */ 
	FPGA_STATUS_LOADED = 0,
	/**< FPGA slot is cleared */
    FPGA_STATUS_CLEARED = 1,
	/**< FPGA slot is busy (e.g. loading an AFI) */
    FPGA_STATUS_BUSY = 2,
	/**< FPGA slot is not programmed */
    FPGA_STATUS_NOT_PROGRAMMED = 3,
    FPGA_STATUS_END,
};